--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
+    "apexcharts": "^3.24.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
     "swiper": "^5.4.5",
     "vee-validate": "^3.4.5",
+    "vue-apexcharts": "^1.6.0",
     "vue-awesome-swiper": "^4.1.1",
     "vue-image-magnifier": "^0.2.1",
     "vue-scrollto": "^2.17.1",
