--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@bachdgvn/vue-otp-input": "^1.0.8",
     "@nuxtjs/axios": "^5.12.5",
     "apexcharts": "^3.24.0",
     "bootstrap": "^4.5.2",
